more styling with inputs and trying to fix the white space in between the footer and container elements

--- a/client/src/containers/About/About.css
+++ b/client/src/containers/About/About.css
@@ -1,5 +1,5 @@
 h4 {
-  font-family: "Handlee", cursive;
+  font-family: "Eater", cursive;
 }
 
 p {
